--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/estilos-form.css">
     <link rel="stylesheet" href="../css/flexbox.css">
     <title>AluraPlay</title>
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <header>
 
         <nav class="cabecalho">
-            <a class="logo" href="../index.php"></a>
+            <a class="logo" href="../"></a>
 
             <div class="cabecalho__icones">
                 <a href="./enviar-video.html" class="cabecalho__videos"></a>
@@ -33,7 +33,7 @@
     <main class="container">
 
         <form class="container__formulario">
-            <h2 class="formulario__titulo">Efetue login</h3>
+            <h2 class="formulario__titulo">Efetue login</h2>
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="usuario">Usuário</label>
                     <input name="user" class="campo__escrita" required
